# franka_emika_basic

./: CMakeLists.txt  LICENSE
include/: controller.h  custommath.h  robotmodel.h  trajectory.h
lib/mujoco-2.3.1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ccd-targets.cmake  cmake_install.cmake  compile_commands.json  mujocoConfigVersion.cmake
lib/mujoco-2.3.1/model/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/model/franka_emika_panda/: fr3.urdf  fr3.xml  scene.xml
lib/mujoco-2.3.1/plugin/elasticity/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/python/mujoco/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/sample/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/simulate/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/src/engine/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/src/render/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/src/ui/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/src/user/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/src/xml/: Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/engine/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/plugin/elasticity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/sample/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/user/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/mujoco-2.3.1/test/xml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
model/franka_emika_panda/: fr3.xml  mjinclude_fr3.xml  mjinclude_handle.xml  mjinclude_panda.xml  mjinclude_valve.xml  panda.xml  scene_valve.xml  scene_valve_assets.xml  valve_round.xml
model/franka_emika_panda/meshes/: panda_assets.xml
model/franka_emika_panda/meshes/objects/: handle.STL  handle_base.STL  handle_base_c.STL  handle_c.STL  valve.STL  valve_base.STL
model/franka_emika_panda/meshes/objects/valve/: decomp.stl
model/franka_emika_panda/meshes/objects/valve_base/: decomp.stl
simulate/: MUJOCO_LOG.TXT  Makefile  controller.cpp  main.cc  robotmodel.cpp  simulate.cc  simulate.h  testmujoco.py  trajectory.cpp
